Fixes And Optimisation in the cleanup ping feature mailling feature game admin interface finished